--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 /dance-with-cancer/与癌共舞板块.xlsx
 /dance-with-cancer/与癌共舞采集帖（完整板块）_截至20220712进度最终版.xlsx
 /js/
-/dance-with-cancer/sql2csv.py
+/sql2csv.py
